--- a/index.html
+++ b/index.html
@@ -3,9 +3,115 @@
     <head>
         <title></title>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        
         <link rel="stylesheet" type="text/css" href="css/reset.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
+    	<nav>
+    		
+    	</nav>
+    	<main class="container">
+    		<div class="row">
+    			<div class="col-lg-3 col-md-5"><h1>Featured Stories</h1></div>
+    			<div class="col-lg-6 col-md-7">
+    				<h1>Top Story</h1>
+    				<h1>More Stories</h1>
+    			</div>
+    			<div class="col-lg-3 col-md">
+    				<h1>Opinion</h1>
+    				<h1>Latest News</h1>
+    			</div>
+    		</div>
+
+    		<h1>Magazine</h1>
+    		<div class="row">
+    			<div class="col-md-3"></div>
+    			<div class="col-md-3"></div>
+    			<div class="col-md-3"></div>
+    			<div class="col-md-3"></div>
+    			<div class="col-md-3"></div>
+    			<div class="col-md-3"></div>
+    			<div class="col-md-3"></div>
+    			<div class="col-md-3"></div>
+    		</div>
+
+    		<h1>Editor's Pick</h1>
+    		<div class="row">
+    			<div class="col-lg-3 col-md-6"></div>
+    			<div class="col-lg-3 col-md-6"></div>
+    			<div class="col-lg-3 col-md-6"></div>
+    			<div class="col-lg-3 col-md-6"></div>
+    			<div class="col-lg-3 col-md-6"></div>
+    			<div class="col-lg-3 col-md-6"></div>
+    			<div class="col-lg-3 col-md-6"></div>
+    			<div class="col-lg-3 col-md-6"></div>
+    		</div>
+
+    		<h1>Featured Slideshows</h1>
+    		<div class="row">
+    			<div class="col-md-4"></div>
+    			<div class="col-md-4"></div>
+    			<div class="col-md-4"></div>
+    			<div class="col-md-4"></div>
+    			<div class="col-md-4"></div>
+    			<div class="col-md-4"></div>
+    		</div>
+
+    		<h1>U.S.</h1>
+    		<div class="row">
+    			<div class="col-md-4"></div>
+    			<div class="col-md-4"></div>
+    			<div class="col-md-4"></div>
+    		</div>
+
+    		<h1>World</h1>
+    		<div class="row">
+    			<div class="col-md-4"></div>
+    			<div class="col-md-4"></div>
+    			<div class="col-md-4"></div>
+    		</div>
+
+    		<h1>Business</h1>
+    		<div class="row">
+    			<div class="col-md-4"></div>
+    			<div class="col-md-4"></div>
+    			<div class="col-md-4"></div>
+    		</div>
+
+    		<h1>Tech</h1>
+    		<div class="row">
+    			<div class="col-md-4"></div>
+    			<div class="col-md-4"></div>
+    			<div class="col-md-4"></div>
+    		</div>
+
+    		<h1>Culture</h1>
+    		<div class="row">
+    			<div class="col-md-4"></div>
+    			<div class="col-md-4"></div>
+    			<div class="col-md-4"></div>
+    		</div>
+
+    		<h1>Sports</h1>
+    		<div class="row">
+    			<div class="col-md-4"></div>
+    			<div class="col-md-4"></div>
+    			<div class="col-md-4"></div>
+    		</div>
+
+    		<div class="row">
+    			<div class="col-md-4"><h3>Subscribe</h3></div>
+    			<div class="col-md-4"></div>
+    			<div class="col-md-4"><h3>Most Read</h3></div>
+    		</div>
+
+    		<footer></footer>
+
+
+    	</main>
     </body>
 </html>
