--- a/index.html
+++ b/index.html
@@ -125,7 +125,16 @@
     			<div class="col-md-4"><h3>Most Read</h3></div>
     		</div>
 
-    		<footer></footer>
+    		<footer>
+    			<div class="row">
+    				<div class="col-md-8">Newseek</div>
+    				<div class="col-md-4">Social</div>
+    			</div>
+    			<div class="row">
+    				<div class="col-lg-8">Links</div>
+    				<div class="col-lg-4">Editions</div>
+    			</div>
+    		</footer>
 
 
     	</main>
