mobile, nav, footer, container adjustments

--- a/index.html
+++ b/index.html
@@ -13,27 +13,29 @@
     </head>
     <body>
     	<header>
-    	<div class="main-logo">
-    		<img src="images/main-white.png" alt="main">
-    		<div class="right">
-    			<i class="fas fa-bars"></i>
-    		</div>
-    		
-    	</div>
-    	<nav>
-    		<ul>
-    			<li>U.S.</li>
-    			<li>World</li>
-    			<li>Business</li>
-    			<li>Tech</li>
-    			<li>Culture</li>
-    			<li>Sports</li>
-    			<li>Health</li>
-    			<li>Opinion</li>
-    			<li>Ndelible</li>
-    			<li>Search</li>
-    		</ul>
-    	</nav>	
+			<div class="main-logo">
+				<img src="images/main-white.png" alt="main">
+				<div class="right">
+					<a>Sign In</a>
+					<a>Subscribe</a>
+					<i class="fas fa-bars"></i>
+				</div>
+			</div>
+
+			<nav class="container">
+				<ul>
+					<li>U.S.</li>
+					<li>World</li>
+					<li>Business</li>
+					<li>Tech</li>
+					<li>Culture</li>
+					<li>Sports</li>
+					<li>Health</li>
+					<li>Opinion</li>
+					<li>Ndelible</li>
+					<li>Search</li>
+				</ul>
+			</nav>	
     	</header>
     	
     	<main class="container">
