html validator updates

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title></title>
+        <title>Newsweek Clone</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -314,7 +314,7 @@
     		<h3 class="center">IN THE MAGAZINE</h3>
     		<div class="row mag">
     			<div class="col-md-3">
-    				<img src="images/mag.jpg" />
+    				<img src="images/mag.jpg" alt="img"/>
     				<div>
     					<a>Cover</a>
     					<a>World</a>
@@ -324,7 +324,7 @@
     				</h2>
     			</div>
     			<div class="col-md-3">
-    				<img src="images/mag2.jpg" />
+    				<img src="images/mag2.jpg" alt="img"/>
     				<div>
     					<a>Downloads</a>
     					<a>World</a>
@@ -334,7 +334,7 @@
     				</h2>
     			</div>
     			<div class="col-md-3">
-    				<img src="images/mag.jpg" />
+    				<img src="images/mag.jpg" alt="img"/>
     				<div>
     					<a>Cover</a>
     					<a>World</a>
@@ -344,7 +344,7 @@
     				</h2>
     			</div>
     			<div class="col-md-3">
-    				<img src="images/mag2.jpg" />
+    				<img src="images/mag2.jpg" alt="img"/>
     				<div>
     					<a>Downloads</a>
     					<a>World</a>
@@ -354,7 +354,7 @@
     				</h2>
     			</div>
     			<div class="col-md-3">
-    				<img src="images/mag.jpg" />
+    				<img src="images/mag.jpg" alt="img"/>
     				<div>
     					<a>Cover</a>
     					<a>World</a>
@@ -364,7 +364,7 @@
     				</h2>
     			</div>
     			<div class="col-md-3">
-    				<img src="images/mag2.jpg" />
+    				<img src="images/mag2.jpg" alt="img"/>
     				<div>
     					<a>Downloads</a>
     					<a>World</a>
@@ -374,7 +374,7 @@
     				</h2>
     			</div>
     			<div class="col-md-3">
-    				<img src="images/mag.jpg" />
+    				<img src="images/mag.jpg" alt="img"/>
     				<div>
     					<a>Cover</a>
     					<a>World</a>
@@ -384,7 +384,7 @@
     				</h2>
     			</div>
     			<div class="col-md-3">
-    				<img src="images/mag2.jpg" />
+    				<img src="images/mag2.jpg" alt="img"/>
     				<div>
     					<a>Downloads</a>
     					<a>World</a>
